align correction

--- a/MODULO_01/CLASE_01_02/css/style.css
+++ b/MODULO_01/CLASE_01_02/css/style.css
@@ -2,8 +2,9 @@
     width: 17em;
     border: 1px solid #333;
     box-shadow: 8px 8px 5px #000000;
-    padding: 8px 20px;
+    padding: 8px 15px;
     background-image: linear-gradient(180deg, #fff2f2, #ddd 40%, #ccc);
+    text-align: center;
   }
 
   .perfil img {
